--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -5,6 +5,43 @@
 	author = {Brown, Mike},
 	year = {2012},
 }
+
+@article{shields1989body,
+  title={The body awareness questionnaire: reliability and validity},
+  author={Shields, Stephanie A and Mallory, Mary E and Simon, Angela},
+  journal={Journal of personality Assessment},
+  volume={53},
+  number={4},
+  pages={802--815},
+  year={1989},
+  publisher={Taylor \& Francis}
+}
+@article{garner1991eating,
+  title={Eating disorder Inventory-2; pro-fessional manual},
+  author={Garner, David M},
+  journal={Psychological assessment resources},
+  year={1991}
+}
+@article{ferentzi2021examining,
+  title={Examining the factor structure and validity of the multidimensional assessment of interoceptive awareness},
+  author={Ferentzi, Eszter and Olaru, Gabriel and Geiger, Mattis and Vig, Luca and K{\"o}teles, Ferenc and Wilhelm, Oliver},
+  journal={Journal of Personality Assessment},
+  volume={103},
+  number={5},
+  pages={675--684},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+@article{miller1981consciousness,
+  title={Consciousness of body: private and public.},
+  author={Miller, Lynn C and Murphy, Richard and Buss, Arnold H},
+  journal={Journal of personality and social psychology},
+  volume={41},
+  number={2},
+  pages={397},
+  year={1981},
+  publisher={American Psychological Association}
+}
 @article{brotherton2013measuring,
   title={Measuring belief in conspiracy theories: The generic conspiracist beliefs scale},
   author={Brotherton, Robert and French, Christopher C and Pickering, Alan D},
