changes to manuscript

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -698,6 +698,30 @@
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
+@article{hickman2020relationship,
+  title={The relationship between heartbeat counting and heartbeat discrimination: A meta-analysis},
+  author={Hickman, Lydia and Seyedsalehi, Aida and Cook, Jennifer L and Bird, Geoffrey and Murphy, Jennifer},
+  journal={Biological Psychology},
+  volume={156},
+  pages={107949},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{Desmedt2023accuracy,
+title = {The new measures of interoceptive accuracy: A systematic review and assessment},
+journal = {Neuroscience & Biobehavioral Reviews},
+volume = {153},
+pages = {105388},
+year = {2023},
+issn = {0149-7634},
+doi = {https://doi.org/10.1016/j.neubiorev.2023.105388},
+url = {https://www.sciencedirect.com/science/article/pii/S0149763423003573},
+author = {Olivier Desmedt and Olivier Luminet and Marta Walentynowicz and Olivier Corneille},
+keywords = {Interoception, Interoceptive accuracy, Measurement, Validity, Reliability},
+abstract = {Conscious interoception, the perception of internal bodily states, is thought to contribute to fundamental human abilities (e.g., decision-making and emotional regulation). One of its most studied dimensions is interoceptive accuracy: the objective capacity to detect internal bodily signals. In the past few years, several labs across the world have started developing new tasks aimed at overcoming limitations inherent in classical measures of interoceptive accuracy. In this systematic review, we identified these tasks (since 2015) for the cardiac, respiratory, and gastrointestinal domains. For each identified task, we discuss their strengths and weaknesses, and make constructive suggestions for further improvement. In the general discussion, we discuss the (potentially elusive) possibility of reaching high validity in the measurement of interoceptive accuracy. We also point out that interoceptive accuracy may not be the most critical dimension for informing current theories, and we encourage researchers to investigate other dimensions of conscious interoception.}
+}
+
 @article{cabrera2018assessing,
   title={Assessing body awareness and autonomic reactivity: Factor structure and psychometric properties of the Body Perception Questionnaire-Short Form (BPQ-SF)},
   author={Cabrera, Ana and Kolacz, Jacek and Pailhez, Guillem and Bulbena-Cabre, Andrea and Bulbena, Antonio and Porges, Stephen W},
