--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -132,8 +132,14 @@ While recent research emphasizes a key role of interoception in a variety of pro
 
 <!-- Interoception measure -->
 
-Various measures of interoception have been developed (see @fig-measures), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking *vs.* questionnaires and subjective scales involving a metacognitive reflection), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes *vs.* measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., accuracy, sensitivity, awareness).
-While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014].
+<!-- Various measures of interoception have been developed (see @fig-measures), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking *vs.* questionnaires and subjective scales involving a metacognitive reflection), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes *vs.* measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., accuracy, sensitivity, awareness). -->
+
+<!-- While this is longer it breaks it down a bit more -->
+Various measures of interoception have been developed (see @fig-measures), combining different approaches, including both “objective” and “subjective” assessments—physiological tasks, such as  Heartbeat Counting Task [HCT, @schandry1981heart] or the Heartbeat Detection Task [HDT, @kleckner2015methodological], versus questionnaires and rating scales that require metacognitive reflection. 
+A further distinction can be made between “explicit” and “implicit” paradigms, where explicit measures direct participants’ awareness toward interoceptive processes, while implicit measures assess interoception unbeknownst to them. 
+Additionally, interoceptive measures vary across different modalities, such as cardioception, respiroception, and gastroception. 
+Finally, these measures assess various theoretical dimensions, including accuracy, sensitivity, awareness, and magnitude.
+While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014; @Desmedt2023accuracy].
 
 ```{r}
 #| warning: false
@@ -149,7 +155,9 @@ knitr::include_graphics("figures/MeasuringInteroception.jpg")
 
 Although the use of subjective self-report questionnaires to measure deeply embodied functions might seem paradoxical at first, recent redefinitions of interoception emphasize the role of high-level and metacognitive elaboration of interoceptive information.
 These redefinitions provide theoretical grounding to support the idea that some facets of interoception, including participants' metacognitive beliefs, can be assessed subjectively [@khalsa2018interoception; @suksasilp2022towards].
-Moreover, the notion that self-reports might not reflect the same processes as other interoception tasks might be important to contextualize the apparent lack of convergence between measures in the field [@desmedt2022measures]. For instance, existing findings typically show weak or no correlations between questionnaires and objective measures [including for measures of the same theorethical dimensions, e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023], such as the Heartbeat Counting Task [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological]. 
+Moreover, the notion that self-reports might not reflect the same processes as other interoception tasks might be important to contextualize the apparent lack of convergence between measures in the field [@desmedt2022measures]. 
+For instance, existing findings typically show weak or no correlations between questionnaires and objective measures [including for measures of the same theorethical dimensions, e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023; @arslanova2022], such as the HCT and the HDT. 
+Additionally, objective measures assessing the same interoceptive dimension, such as accuracy, either show no correlation [e.g., @brand2023] or only weak correlations [e.g., @hickman2020relationship].
 Perhaps more surprisingly, low correlations have been observed even among questionnaires, suggesting the targeting of different facets related to interoception. 
 
 <!-- 
@@ -157,12 +165,13 @@ Garfinkel - sensibility-> Self-perceived dispositional tendency to be internally
 Khalsa - sensibility -> Self-perceived tendency to focus on interoceptive stimuli (trait measure)
 Khalsa self-report scales -> The ability to reflect upon one’s autobiographical experiences of interoceptive states, make judgments about their outcomes, and describe them through verbal or motor responses. -->
 
-One striking example concerns the assessment of "interoceptive sensibility" defined as the self-reported tendency to focus on and detect internal sensations [@garfinkel2015knowing], or more narrowly as the subjective ability to focus on interoceptive signals [@khalsa2018interoception]. 
-A recent systematic review suggested that various questionnaires designed to assess this dimension actually measure distinct constructs, leading researchers to mistakenly treat them as equivalent measures [@desmedt2022measures]. 
+One striking example concerns the assessment of interoceptive sensibility, which is broadly defined as the self-reported tendency to focus on and detect internal sensations [@garfinkel2015knowing], but more narrowly as the subjective tendency to focus on interoceptive signals, without necessarily implying detection ability [@khalsa2018interoception].
+A recent systematic review suggested that various questionnaires designed to assess interoceptive sensibility may, in fact, measure distinct constructs, leading researchers to treat them as equivalent despite overall low convergence [@desmedt2022measures].
 
-Notably, 'sensibility' in this review also included self-report scales based on @khalsa2018interoception's 8-facet model of interoception, which divides self-report measures into sensibility and self-report scales as the capacity to evaluate one's personal experiences of internal bodily states, assess their consequences, and express them through speech or movement. 
-Some of the studies included the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012; MAIA-2, @mehling2018multidimensional], Body Perception Questionnaire [BPQ, @porges1993body], Private subscale of the Body Consciousness Questionnaire [PBCS, @miller1981consciousness], Body Awareness Questionnaire [BAQ, @shields1989body], and Eating Disorder Inventory [EDI; @garner1991eating, @garner1983]. 
-The inexistent to moderate correlations between these questionnaires underlines the need for a more comprehensive understanding of what is being measured with different questionnaires and dimensions, as well as their potential overlaps with other constructs (e.g., alexithymia, body awareness).
+Notably, this review adopted a broad definition of 'sensibility,' incorporating both interoceptive sensibility and interoceptive self-report scales, as described in @khalsa2018interoception's eight-facet model. 
+In this framework, self-report measures are categorized into interoceptive sensibility and interoceptive self-report scales (i.e., the ability to evaluate one's personal experiences of internal bodily states, assess their consequences, and articulate them through speech or movement).
+Several widely used questionnaires were included in the review, such as the Multidimensional Assessment of Interoceptive Awareness [MAIA, @mehling2012; MAIA-2, @mehling2018multidimensional], the Body Perception Questionnaire [BPQ, @porges1993body], the Private subscale of the Body Consciousness Questionnaire [PBCS, @miller1981consciousness], the Body Awareness Questionnaire [BAQ, @shields1989body], and the Eating Disorder Inventory [EDI, @garner1991eating; @garner1983].
+The lack of correlations to moderate correlations among these questionnaires highlight the need for greater conceptual clarity regarding what each measure captures, how they relate to different dimensions of interoception, and their potential overlaps with other constructs, such as alexithymia and body awareness.
 
 <!-- Introducing the IAS -->
 
